Add simulation results in Chapter 7

--- a/7-job-scheduling/plot.ipynb
+++ b/7-job-scheduling/plot.ipynb
@@ -16,7 +16,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Import packages and define the plot function"
    ]
@@ -24,7 +26,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "%pylab inline"
@@ -33,7 +38,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "# uncomment this line if you prefer dynamic matplotlib plots\n",
@@ -49,7 +57,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "# manipulate dataframes\n",
@@ -59,7 +70,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "# folder where the output of compute.sh is stored\n",
@@ -69,7 +83,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "# load\n",
@@ -334,7 +351,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Large system with a random job assignment"
    ]
@@ -345,7 +364,8 @@
    "metadata": {
     "code_folding": [
      0
-    ]
+    ],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -390,7 +410,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Degree two"
    ]
@@ -398,7 +421,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "hidden": true
    },
    "source": [
     "#### Bimodal number of exponentially-distributed phases"
@@ -429,7 +452,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### Hyperexponential"
@@ -460,7 +484,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "hidden": true
    },
    "source": [
     "#### Zipf number of exponentially-distributed phases"
@@ -490,14 +514,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Degree three"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Bimodal number of exponentially-distributed phases"
    ]
@@ -505,7 +534,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "random(degree=3, metric='delay', job_size_distribution='bimodal', mean_job_size=5)"
@@ -514,7 +545,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "random(degree=3, metric='service-rate', job_size_distribution='bimodal', mean_job_size=5)"
@@ -522,7 +555,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Hyperexponential"
    ]
@@ -530,7 +565,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "random(degree=3, metric='delay', job_size_distribution='hyperexp', mean_job_size=5)"
@@ -539,7 +576,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "random(degree=3, metric='service-rate', job_size_distribution='hyperexp', mean_job_size=5)"
@@ -547,7 +586,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Zipf number of exponentially-distributed phases"
    ]
@@ -555,7 +596,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "random(degree=3, metric='delay', job_size_distribution='zipf', mean_job_size=3.584282)"
@@ -564,7 +607,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "random(degree=3, metric='service-rate', job_size_distribution='zipf', mean_job_size=3.584282)"
