Add data file in 7-job-scheduling/data/

--- a/7-job-scheduling/plot.ipynb
+++ b/7-job-scheduling/plot.ipynb
@@ -16,9 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Import packages and define the plot function"
    ]
@@ -26,10 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "init_cell": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%pylab inline"
@@ -38,10 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "init_cell": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# uncomment this line if you prefer dynamic matplotlib plots\n",
@@ -57,10 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "init_cell": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# manipulate dataframes\n",
@@ -70,10 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "init_cell": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# folder where the output of compute.sh is stored\n",
@@ -83,10 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "init_cell": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# load\n",
@@ -351,9 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Large system with a random job assignment"
    ]
@@ -362,10 +343,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": [
-     0
-    ],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -410,19 +388,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Degree two"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### Bimodal number of exponentially-distributed phases"
    ]
@@ -430,9 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "random(degree=2, metric='delay', job_size_distribution='bimodal', mean_job_size=5)"
@@ -441,9 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "random(degree=2, metric='service-rate', job_size_distribution='bimodal', mean_job_size=5)"
@@ -452,8 +421,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "#### Hyperexponential"
@@ -484,7 +452,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "#### Zipf number of exponentially-distributed phases"
@@ -515,8 +483,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Degree three"
