--- a/9-2-load-balancing-with-multiple-dispatchers/plot.ipynb
+++ b/9-2-load-balancing-with-multiple-dispatchers/plot.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Chapter 9. Extensions\n",
     "\n",
-    "Compute and plot the numerical results of Section 9.2."
+    "Compute and plot the numerical results of Section 9.2. The commented code is in charge of loading simulation results that might be added later."
    ]
   },
   {
@@ -21,8 +21,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:31:41.966768Z",
-     "start_time": "2019-08-23T07:31:41.255035Z"
+     "end_time": "2019-08-23T07:58:33.884785Z",
+     "start_time": "2019-08-23T07:58:33.369097Z"
     }
    },
    "outputs": [
@@ -43,8 +43,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:31:41.972251Z",
-     "start_time": "2019-08-23T07:31:41.969128Z"
+     "end_time": "2019-08-23T07:58:33.907148Z",
+     "start_time": "2019-08-23T07:58:33.896688Z"
     },
     "hide_input": false
    },
@@ -63,8 +63,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:31:42.313066Z",
-     "start_time": "2019-08-23T07:31:41.974907Z"
+     "end_time": "2019-08-23T07:58:34.268136Z",
+     "start_time": "2019-08-23T07:58:33.917819Z"
     }
    },
    "outputs": [],
@@ -78,8 +78,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:31:42.369506Z",
-     "start_time": "2019-08-23T07:31:42.319680Z"
+     "end_time": "2019-08-23T07:58:34.303165Z",
+     "start_time": "2019-08-23T07:58:34.269849Z"
     }
    },
    "outputs": [],
@@ -93,22 +93,23 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:31:42.381760Z",
-     "start_time": "2019-08-23T07:31:42.378876Z"
+     "end_time": "2019-08-23T07:58:34.344063Z",
+     "start_time": "2019-08-23T07:58:34.305709Z"
     }
    },
    "outputs": [],
    "source": [
     "# global variables\n",
-    "#ρρ = linspace(5., 0, 10000, endpoint = False)\n",
-    "#nb_tokens = 6"
+    "ρρ = linspace(4., 0, 50, endpoint = False)\n",
+    "N = 10\n",
+    "μ = 1."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load balancing with multiple dispatchers"
+    "## Function definitions"
    ]
   },
   {
@@ -119,17 +120,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single dispatcher"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:31:42.437217Z",
-     "start_time": "2019-08-23T07:31:42.384238Z"
+     "end_time": "2019-08-23T07:58:34.404991Z",
+     "start_time": "2019-08-23T07:58:34.349472Z"
     }
    },
    "outputs": [],
    "source": [
-    "def single_dynamic(l, μ, ν):\n",
+    "def single_dispatcher(l, μ, ν):\n",
     "    # parameters\n",
     "    I = len(l)\n",
     "    barℓ = zeros(I, dtype=int)\n",
@@ -157,9 +165,6 @@
     "        # sum over the (anti)diagonals\n",
     "        π = [trace(π, n) for n in range(ℓ[i], -barℓ[i] - 1, -1)]\n",
     "    \n",
-    "    # normalize π\n",
-    "    #π /= sum(π)\n",
-    "    \n",
     "    return 1. / sum(π)"
    ]
   },
@@ -167,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Static routing"
+    "### Multiple dispatchers with a static routing"
    ]
   },
   {
@@ -175,13 +180,13 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:31:42.493033Z",
-     "start_time": "2019-08-23T07:31:42.439489Z"
+     "end_time": "2019-08-23T07:58:34.462066Z",
+     "start_time": "2019-08-23T07:58:34.410341Z"
     }
    },
    "outputs": [],
    "source": [
-    "def static(l, α, β):\n",
+    "def multi_dispatcher_static(l, α, β):\n",
     "    maxl = max(l)\n",
     "    cuml = cumsum(l)\n",
     "    \n",
@@ -217,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dynamic routing"
+    "### Multple dispatchers with a dynamic routing"
    ]
   },
   {
@@ -225,8 +230,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:31:42.566481Z",
-     "start_time": "2019-08-23T07:31:42.496881Z"
+     "end_time": "2019-08-23T07:58:34.532022Z",
+     "start_time": "2019-08-23T07:58:34.465760Z"
     }
    },
    "outputs": [],
@@ -272,6 +277,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Numerical results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Balanced arrivals"
    ]
   },
@@ -280,17 +292,14 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:31:42.625245Z",
-     "start_time": "2019-08-23T07:31:42.569664Z"
+     "end_time": "2019-08-23T07:58:34.604775Z",
+     "start_time": "2019-08-23T07:58:34.535075Z"
     }
    },
    "outputs": [],
    "source": [
     "# parameters\n",
-    "ρρ = linspace(4,0,50, endpoint = False)\n",
-    "N = 10\n",
     "ll = [2,4,6]\n",
-    "μ = 1.\n",
     "α1 = .5 # proportion of arrivals at dispatcher 1\n",
     "p1 = .5 # routing probabilities of tokens to dispatcher 1"
    ]
@@ -300,8 +309,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:32:15.229879Z",
-     "start_time": "2019-08-23T07:31:42.628095Z"
+     "end_time": "2019-08-23T07:58:56.293801Z",
+     "start_time": "2019-08-23T07:58:34.608213Z"
     }
    },
    "outputs": [],
@@ -310,10 +319,10 @@
     "for l in ll:\n",
     "    static_result.append([\n",
     "        (\n",
-    "            (1-α1) / single_dynamic(l * ones(N, dtype=int), p1 * μ * ones(N), α1 * N * μ * ρ)\n",
-    "            + α1 / single_dynamic(l * ones(N, dtype=int), (1-p1) * μ * ones(N), (1-α1) * N * μ * ρ)\n",
+    "            (1-α1) / single_dispatcher(l * ones(N, dtype=int), p1 * μ * ones(N), α1 * N * μ * ρ)\n",
+    "            + α1 / single_dispatcher(l * ones(N, dtype=int), (1-p1) * μ * ones(N), (1-α1) * N * μ * ρ)\n",
     "        )\n",
-    "        / static(l * ones(N, dtype=int), p1 / (α1*N*ρ), (1-p1) / ((1-α1)*N*ρ)) for ρ in ρρ\n",
+    "        / multi_dispatcher_static(l * ones(N, dtype=int), p1 / (α1*N*ρ), (1-p1) / ((1-α1)*N*ρ)) for ρ in ρρ\n",
     "    ])"
    ]
   },
@@ -322,8 +331,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:32:48.660616Z",
-     "start_time": "2019-08-23T07:32:15.231740Z"
+     "end_time": "2019-08-23T07:59:18.625619Z",
+     "start_time": "2019-08-23T07:58:56.295598Z"
     }
    },
    "outputs": [],
@@ -345,8 +354,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:32:49.076667Z",
-     "start_time": "2019-08-23T07:32:48.662549Z"
+     "end_time": "2019-08-23T07:59:18.897237Z",
+     "start_time": "2019-08-23T07:59:18.627229Z"
     }
    },
    "outputs": [
@@ -399,17 +408,14 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:32:49.086003Z",
-     "start_time": "2019-08-23T07:32:49.080567Z"
+     "end_time": "2019-08-23T07:59:18.903743Z",
+     "start_time": "2019-08-23T07:59:18.899823Z"
     }
    },
    "outputs": [],
    "source": [
     "# parameters\n",
-    "ρρ = linspace(4,0,50, endpoint = False)\n",
-    "N = 10\n",
     "ll = [2,4,6]\n",
-    "μ = 1.\n",
     "α1 = .8 # proportion of arrivals at dispatcher 1"
    ]
   },
@@ -418,8 +424,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:33:19.011712Z",
-     "start_time": "2019-08-23T07:32:49.088664Z"
+     "end_time": "2019-08-23T07:59:42.743273Z",
+     "start_time": "2019-08-23T07:59:18.906493Z"
     }
    },
    "outputs": [],
@@ -430,10 +436,10 @@
     "for l in ll:\n",
     "    uniform_static_result.append([\n",
     "        (\n",
-    "            (1-α1) / single_dynamic(l * ones(N, dtype=int), p1 * μ * ones(N), α1 * N * μ * ρ)\n",
-    "            + α1 / single_dynamic(l * ones(N, dtype=int), (1-p1) * μ * ones(N), (1-α1) * N * μ * ρ)\n",
+    "            (1-α1) / single_dispatcher(l * ones(N, dtype=int), p1 * μ * ones(N), α1 * N * μ * ρ)\n",
+    "            + α1 / single_dispatcher(l * ones(N, dtype=int), (1-p1) * μ * ones(N), (1-α1) * N * μ * ρ)\n",
     "        )\n",
-    "        / static(l * ones(N, dtype=int), p1 / (α1*N*ρ), (1-p1) / ((1-α1)*N*ρ)) for ρ in ρρ\n",
+    "        / multi_dispatcher_static(l * ones(N, dtype=int), p1 / (α1*N*ρ), (1-p1) / ((1-α1)*N*ρ)) for ρ in ρρ\n",
     "    ])"
    ]
   },
@@ -442,8 +448,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:33:43.341518Z",
-     "start_time": "2019-08-23T07:33:19.013561Z"
+     "end_time": "2019-08-23T08:00:05.641737Z",
+     "start_time": "2019-08-23T07:59:42.752485Z"
     }
    },
    "outputs": [],
@@ -454,10 +460,10 @@
     "for l in ll:\n",
     "    best_static_result.append([\n",
     "        (\n",
-    "            (1-α1) / single_dynamic(l * ones(N, dtype=int), p1 * μ * ones(N), α1 * N * μ * ρ)\n",
-    "            + α1 / single_dynamic(l * ones(N, dtype=int), (1-p1) * μ * ones(N), (1-α1) * N * μ * ρ)\n",
+    "            (1-α1) / single_dispatcher(l * ones(N, dtype=int), p1 * μ * ones(N), α1 * N * μ * ρ)\n",
+    "            + α1 / single_dispatcher(l * ones(N, dtype=int), (1-p1) * μ * ones(N), (1-α1) * N * μ * ρ)\n",
     "        )\n",
-    "        / static(l * ones(N, dtype=int), p1 / (α1*N*ρ), (1-p1) / ((1-α1)*N*ρ)) for ρ in ρρ\n",
+    "        / multi_dispatcher_static(l * ones(N, dtype=int), p1 / (α1*N*ρ), (1-p1) / ((1-α1)*N*ρ)) for ρ in ρρ\n",
     "    ])"
    ]
   },
@@ -466,8 +472,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:34:04.875793Z",
-     "start_time": "2019-08-23T07:33:43.343226Z"
+     "end_time": "2019-08-23T08:00:25.308546Z",
+     "start_time": "2019-08-23T08:00:05.643170Z"
     }
    },
    "outputs": [],
@@ -489,8 +495,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:34:05.190064Z",
-     "start_time": "2019-08-23T07:34:04.877332Z"
+     "end_time": "2019-08-23T08:00:25.606235Z",
+     "start_time": "2019-08-23T08:00:25.311903Z"
     }
    },
    "outputs": [
@@ -546,17 +552,14 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:34:05.196346Z",
-     "start_time": "2019-08-23T07:34:05.192643Z"
+     "end_time": "2019-08-23T08:00:25.613323Z",
+     "start_time": "2019-08-23T08:00:25.608269Z"
     }
    },
    "outputs": [],
    "source": [
     "# parameters\n",
-    "ρρ = linspace(4,0,50, endpoint = False)\n",
-    "N = 10\n",
     "l = 6\n",
-    "μ = 1.\n",
     "α1 = .5 # proportion of arrivals at dispatcher 1"
    ]
   },
@@ -565,8 +568,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:34:22.078349Z",
-     "start_time": "2019-08-23T07:34:05.209090Z"
+     "end_time": "2019-08-23T08:00:41.295140Z",
+     "start_time": "2019-08-23T08:00:25.620894Z"
     }
    },
    "outputs": [],
@@ -574,9 +577,9 @@
     "p1 = .5 # routing probabilities of tokens to dispatcher 1\n",
     "\n",
     "best_static_result = [ (\n",
-    "    (1-α1) / single_dynamic(l * ones(N, dtype=int), p1 * μ * ones(N), α1 * N * μ * ρ)\n",
-    "    + α1 / single_dynamic(l * ones(N, dtype=int), (1-p1) * μ * ones(N), (1-α1) * N * μ * ρ)\n",
-    ") / static(l * ones(N, dtype=int), p1 / (α1*N*ρ), (1-p1) / ((1-α1)*N*ρ)) for ρ in ρρ ]"
+    "    (1-α1) / single_dispatcher(l * ones(N, dtype=int), p1 * μ * ones(N), α1 * N * μ * ρ)\n",
+    "    + α1 / single_dispatcher(l * ones(N, dtype=int), (1-p1) * μ * ones(N), (1-α1) * N * μ * ρ)\n",
+    ") / multi_dispatcher_static(l * ones(N, dtype=int), p1 / (α1*N*ρ), (1-p1) / ((1-α1)*N*ρ)) for ρ in ρρ ]"
    ]
   },
   {
@@ -584,8 +587,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:34:37.611767Z",
-     "start_time": "2019-08-23T07:34:22.080289Z"
+     "end_time": "2019-08-23T08:00:55.872306Z",
+     "start_time": "2019-08-23T08:00:41.296989Z"
     }
    },
    "outputs": [],
@@ -601,8 +604,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:34:37.859637Z",
-     "start_time": "2019-08-23T07:34:37.613676Z"
+     "end_time": "2019-08-23T08:00:56.214711Z",
+     "start_time": "2019-08-23T08:00:55.873779Z"
     }
    },
    "outputs": [
@@ -652,17 +655,14 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:34:37.867045Z",
-     "start_time": "2019-08-23T07:34:37.861407Z"
+     "end_time": "2019-08-23T08:00:56.220460Z",
+     "start_time": "2019-08-23T08:00:56.217025Z"
     }
    },
    "outputs": [],
    "source": [
     "# parameters\n",
-    "ρρ = linspace(4,0,50, endpoint = False)\n",
-    "N = 10\n",
     "l = 6\n",
-    "μ = 1.\n",
     "α1 = .8 # proportion of arrivals at dispatcher 1"
    ]
   },
@@ -671,8 +671,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:34:54.568912Z",
-     "start_time": "2019-08-23T07:34:37.872695Z"
+     "end_time": "2019-08-23T08:01:11.967149Z",
+     "start_time": "2019-08-23T08:00:56.224878Z"
     }
    },
    "outputs": [],
@@ -680,9 +680,9 @@
     "p1 = .5 # routing probabilities of tokens to dispatcher 1\n",
     "\n",
     "uniform_static_result = [ (\n",
-    "    (1-α1) / single_dynamic(l * ones(N, dtype=int), p1 * μ * ones(N), α1 * N * μ * ρ)\n",
-    "    + α1 / single_dynamic(l * ones(N, dtype=int), (1-p1) * μ * ones(N), (1-α1) * N * μ * ρ)\n",
-    ") / static(l * ones(N, dtype=int), p1 / (α1*N*ρ), (1-p1) / ((1-α1)*N*ρ)) for ρ in ρρ ]"
+    "    (1-α1) / single_dispatcher(l * ones(N, dtype=int), p1 * μ * ones(N), α1 * N * μ * ρ)\n",
+    "    + α1 / single_dispatcher(l * ones(N, dtype=int), (1-p1) * μ * ones(N), (1-α1) * N * μ * ρ)\n",
+    ") / multi_dispatcher_static(l * ones(N, dtype=int), p1 / (α1*N*ρ), (1-p1) / ((1-α1)*N*ρ)) for ρ in ρρ ]"
    ]
   },
   {
@@ -690,8 +690,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:35:13.636294Z",
-     "start_time": "2019-08-23T07:34:54.570814Z"
+     "end_time": "2019-08-23T08:01:27.289207Z",
+     "start_time": "2019-08-23T08:01:11.968604Z"
     }
    },
    "outputs": [],
@@ -699,9 +699,9 @@
     "p1 = .8 # routing probabilities of tokens to dispatcher 1\n",
     "\n",
     "best_static_result = [ (\n",
-    "    (1 - α1) / single_dynamic(l * ones(N, dtype=int), p1 * μ * ones(N), α1 * N * μ * ρ)\n",
-    "    + α1 / single_dynamic(l * ones(N, dtype=int), (1 - p1) * μ * ones(N), (1 - α1) * N * μ * ρ)\n",
-    ") / static(l * ones(N, dtype=int), p1 / (α1*N*ρ), (1 - p1) / ((1 - α1) * N * ρ)) for ρ in ρρ ]"
+    "    (1 - α1) / single_dispatcher(l * ones(N, dtype=int), p1 * μ * ones(N), α1 * N * μ * ρ)\n",
+    "    + α1 / single_dispatcher(l * ones(N, dtype=int), (1 - p1) * μ * ones(N), (1 - α1) * N * μ * ρ)\n",
+    ") / multi_dispatcher_static(l * ones(N, dtype=int), p1 / (α1*N*ρ), (1 - p1) / ((1 - α1) * N * ρ)) for ρ in ρρ ]"
    ]
   },
   {
@@ -709,8 +709,8 @@
    "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:35:31.654128Z",
-     "start_time": "2019-08-23T07:35:13.638256Z"
+     "end_time": "2019-08-23T08:01:40.867759Z",
+     "start_time": "2019-08-23T08:01:27.292233Z"
     }
    },
    "outputs": [],
@@ -726,8 +726,8 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:35:31.968017Z",
-     "start_time": "2019-08-23T07:35:31.656060Z"
+     "end_time": "2019-08-23T08:01:41.061739Z",
+     "start_time": "2019-08-23T08:01:40.869446Z"
     }
    },
    "outputs": [
@@ -776,8 +776,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T07:35:31.993324Z",
-     "start_time": "2019-08-23T07:35:31.973409Z"
+     "end_time": "2019-08-23T08:01:41.074868Z",
+     "start_time": "2019-08-23T08:01:41.063987Z"
     }
    },
    "outputs": [],
