Simplify plot.ipynb in Section 9.2
Rename functions to reflect what they do.

--- a/9-2-load-balancing-with-multiple-dispatchers/plot.ipynb
+++ b/9-2-load-balancing-with-multiple-dispatchers/plot.ipynb
@@ -21,8 +21,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:56:29.068365Z",
-     "start_time": "2019-08-23T08:56:28.610844Z"
+     "end_time": "2019-08-23T09:12:37.876993Z",
+     "start_time": "2019-08-23T09:12:37.265775Z"
     }
    },
    "outputs": [
@@ -35,7 +35,8 @@
     }
    ],
    "source": [
-    "%pylab inline"
+    "%pylab inline\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -43,8 +44,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:56:29.077265Z",
-     "start_time": "2019-08-23T08:56:29.071913Z"
+     "end_time": "2019-08-23T09:12:37.883113Z",
+     "start_time": "2019-08-23T09:12:37.879615Z"
     },
     "hide_input": false
    },
@@ -63,23 +64,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:56:29.476125Z",
-     "start_time": "2019-08-23T08:56:29.081112Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# manipulate dataframes\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-23T08:56:29.536423Z",
-     "start_time": "2019-08-23T08:56:29.479685Z"
+     "end_time": "2019-08-23T09:12:37.994265Z",
+     "start_time": "2019-08-23T09:12:37.886143Z"
     }
    },
    "outputs": [],
@@ -90,11 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:56:29.545101Z",
-     "start_time": "2019-08-23T08:56:29.539820Z"
+     "end_time": "2019-08-23T09:12:38.014014Z",
+     "start_time": "2019-08-23T09:12:37.996753Z"
     }
    },
    "outputs": [],
@@ -116,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All numerical results are for two dispatchers only."
+    "All numerical results are for two dispatchers only. Incoming jobs have no assignment constraints, so that they are only rejected if their dispatcher is empty of tokens."
    ]
   },
   {
@@ -127,20 +113,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compute the normalization constant in a cluster with a single dispatcher."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:56:29.604206Z",
-     "start_time": "2019-08-23T08:56:29.548742Z"
+     "end_time": "2019-08-23T09:12:38.071687Z",
+     "start_time": "2019-08-23T09:12:38.016155Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
-    "def single_dispatcher(l, μ, ν):\n",
+    "def single_dispatcher_normalization(l, μ, ν):\n",
     "    # parameters\n",
     "    I = len(l)\n",
     "    cuml = zeros(I, dtype=int)\n",
@@ -180,19 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:56:29.663000Z",
-     "start_time": "2019-08-23T08:56:29.607070Z"
+     "end_time": "2019-08-23T09:12:38.130077Z",
+     "start_time": "2019-08-23T09:12:38.073914Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
-    "def multi_dispatcher_static(l, α, β):\n",
+    "def multi_dispatcher_static_normalization(l, α, β):\n",
     "    I = len(l)\n",
     "    maxl = max(l)\n",
     "    cuml = cumsum(l)\n",
@@ -204,11 +193,11 @@
     "    βt[1:] = cumprod(β / arange(1, maxl + 1))\n",
     "    \n",
     "    # i = 0\n",
-    "    oldG = outer(α**arange(l[0] + 1), β**arange(l[0] + 1)) * (tri(l[0] + 1)[::-1])\n",
+    "    oldπ = outer(α**arange(l[0] + 1), β**arange(l[0] + 1)) * (tri(l[0] + 1)[::-1])\n",
     "    \n",
     "    # i > 0\n",
     "    for i in range(1, I):\n",
-    "        G = zeros((cuml[i] + 1, cuml[i] + 1), dtype=float64)\n",
+    "        π = zeros((cuml[i] + 1, cuml[i] + 1), dtype=float64)\n",
     "        \n",
     "        for ps in range(cuml[i-1] + 1):\n",
     "            for pt in range(cuml[i-1] - ps + 1):\n",
@@ -216,32 +205,32 @@
     "                for s in range(ps, ps + l[i] + 1):\n",
     "                    prodt = float64(1.)\n",
     "                    for t in range(pt, pt + l[i] - (s - ps) + 1):\n",
-    "                        G[s,t] += oldG[ps, pt] * αs[s-ps] * βt[t-pt] * prods * prodt\n",
+    "                        π[s,t] += oldπ[ps, pt] * αs[s-ps] * βt[t-pt] * prods * prodt\n",
     "                        prodt *= (t + 1)\n",
     "                    prods *= (s + 1)\n",
     "        \n",
-    "        oldG = copy(G)\n",
+    "        oldπ = copy(π)\n",
     "    \n",
-    "    return sum(sum(G))"
+    "    return sum(sum(π))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:56:29.732690Z",
-     "start_time": "2019-08-23T08:56:29.667671Z"
+     "end_time": "2019-08-23T09:12:38.198932Z",
+     "start_time": "2019-08-23T09:12:38.131952Z"
     }
    },
    "outputs": [],
    "source": [
-    "def multi_dispatcher_static_df(I, l, α1, p1, μ, ρρ):\n",
+    "def multi_dispatcher_static_loss(I, l, α1, p1, μ, ρρ):\n",
     "    ll = l * ones(I, dtype=int)\n",
     "    return [ (\n",
-    "        (1 - α1) / single_dispatcher(ll, p1 * μ * ones(I), α1 * I * μ * ρ)\n",
-    "        + α1 / single_dispatcher(ll, (1 - p1) * μ * ones(I), (1 - α1) * I * μ * ρ)\n",
-    "    ) / multi_dispatcher_static(ll, p1 / (α1*I*ρ), (1 - p1) / ((1 - α1) * I * ρ)) for ρ in ρρ ]"
+    "        (1 - α1) / single_dispatcher_normalization(ll, p1 * μ * ones(I), α1 * I * μ * ρ)\n",
+    "        + α1 / single_dispatcher_normalization(ll, (1 - p1) * μ * ones(I), (1 - α1) * I * μ * ρ)\n",
+    "    ) / multi_dispatcher_static_normalization(ll, p1 / (α1 * I * ρ), (1 - p1) / ((1 - α1) * I * ρ)) for ρ in ρρ ]"
    ]
   },
   {
@@ -253,19 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:56:29.792713Z",
-     "start_time": "2019-08-23T08:56:29.738147Z"
+     "end_time": "2019-08-23T09:12:38.254495Z",
+     "start_time": "2019-08-23T09:12:38.202219Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
-    "def multi_dispatcher_dynamic(I, l, α, β):\n",
+    "def multi_dispatcher_dynamic_normalization(I, l, α, β):\n",
     "    q = l // 2\n",
     "    \n",
     "    αs = ones(q + 1, dtype=float64)\n",
@@ -280,12 +267,12 @@
     "            coeff[y,z] = special.binom(l - y - z, q - y)\n",
     "    \n",
     "    # i = 0\n",
-    "    oldG = outer(α**arange(l + 1), β**arange(l + 1)) * (tri(l + 1)[::-1])\n",
-    "    oldG = oldG[:q + 1,:q + 1] * coeff\n",
+    "    oldπ = outer(α**arange(l + 1), β**arange(l + 1)) * (tri(l + 1)[::-1])\n",
+    "    oldπ = oldπ[:q + 1,:q + 1] * coeff\n",
     "    \n",
     "    # i > 0\n",
     "    for i in range(1, I):\n",
-    "        G = zeros((q * (i + 1) + 1, q * (i + 1) + 1), dtype=float64)\n",
+    "        π = zeros((q * (i + 1) + 1, q * (i + 1) + 1), dtype=float64)\n",
     "        \n",
     "        for ps in range(q * i + 1):\n",
     "            for pt in range(min(q * i, l * i - ps) + 1):\n",
@@ -293,32 +280,32 @@
     "                for s in range(ps, ps + q + 1):\n",
     "                    prodt = float64(1.)\n",
     "                    for t in range(pt, pt + min(q, l - (s - ps)) + 1):\n",
-    "                        G[s,t] += (oldG[ps, pt] * αs[s - ps] * βt[t - pt]\n",
+    "                        π[s,t] += (oldπ[ps,pt] * αs[s - ps] * βt[t - pt]\n",
     "                                   * prods * prodt * coeff[s - ps,t - pt])\n",
     "                        prodt *= (t+1)\n",
     "                    prods *= (s+1)\n",
     "        \n",
-    "        oldG = copy(G)\n",
+    "        oldπ = copy(π)\n",
     "    \n",
-    "    return sum(sum(G))"
+    "    return sum(sum(π))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:56:29.864913Z",
-     "start_time": "2019-08-23T08:56:29.797550Z"
+     "end_time": "2019-08-23T09:12:38.329605Z",
+     "start_time": "2019-08-23T09:12:38.258132Z"
     }
    },
    "outputs": [],
    "source": [
-    "def multi_dispatcher_dynamic_df(I, l, α1, μ, ρρ):\n",
+    "def multi_dispatcher_dynamic_loss(I, l, α1, μ, ρρ):\n",
     "    return [ (\n",
-    "    (1 - α1) * multi_dispatcher_dynamic(I, l, 1. / (α1 * I * ρ), 0.)\n",
-    "    + α1 * multi_dispatcher_dynamic(I, l, 0., 1. / ((1 - α1) * I * ρ))\n",
-    ") / multi_dispatcher_dynamic(I, l, 1. / (α1 * I * ρ), 1. / ((1 - α1) * I * ρ)) for ρ in ρρ ]"
+    "    (1 - α1) * multi_dispatcher_dynamic_normalization(I, l, 1. / (α1 * I * ρ), 0.)\n",
+    "    + α1 * multi_dispatcher_dynamic_normalization(I, l, 0., 1. / ((1 - α1) * I * ρ))\n",
+    ") / multi_dispatcher_dynamic_normalization(I, l, 1. / (α1 * I * ρ), 1. / ((1 - α1) * I * ρ)) for ρ in ρρ ]"
    ]
   },
   {
@@ -337,11 +324,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:56:29.920183Z",
-     "start_time": "2019-08-23T08:56:29.867644Z"
+     "end_time": "2019-08-23T09:12:38.386604Z",
+     "start_time": "2019-08-23T09:12:38.332652Z"
     }
    },
    "outputs": [],
@@ -354,16 +341,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:56:53.945122Z",
-     "start_time": "2019-08-23T08:56:29.922097Z"
+     "end_time": "2019-08-23T09:13:01.136463Z",
+     "start_time": "2019-08-23T09:12:38.392970Z"
     }
    },
    "outputs": [],
    "source": [
-    "static = [multi_dispatcher_static_df(I, l, α1, p1, μ, ρρ) for l in ll]"
+    "static = [multi_dispatcher_static_loss(I, l, α1, p1, μ, ρρ) for l in ll]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-23T09:13:23.225683Z",
+     "start_time": "2019-08-23T09:13:01.138100Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dynamic = [multi_dispatcher_dynamic_loss(I, l, α1, μ, ρρ) for l in ll]"
    ]
   },
   {
@@ -371,22 +372,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:57:16.205107Z",
-     "start_time": "2019-08-23T08:56:53.948082Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dynamic = [multi_dispatcher_dynamic_df(I, l, α1, μ, ρρ) for l in ll]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-23T08:57:16.522121Z",
-     "start_time": "2019-08-23T08:57:16.207579Z"
+     "end_time": "2019-08-23T09:13:23.512933Z",
+     "start_time": "2019-08-23T09:13:23.227792Z"
     }
    },
    "outputs": [
@@ -436,11 +423,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:57:16.536164Z",
-     "start_time": "2019-08-23T08:57:16.524251Z"
+     "end_time": "2019-08-23T09:13:23.519473Z",
+     "start_time": "2019-08-23T09:13:23.515085Z"
     }
    },
    "outputs": [],
@@ -452,17 +439,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:57:41.893092Z",
-     "start_time": "2019-08-23T08:57:16.538745Z"
+     "end_time": "2019-08-23T09:13:46.017481Z",
+     "start_time": "2019-08-23T09:13:23.522535Z"
     }
    },
    "outputs": [],
    "source": [
     "p1 = .5\n",
-    "uniform_static = [multi_dispatcher_static_df(I, l, α1, p1, μ, ρρ) for l in ll]"
+    "uniform_static = [multi_dispatcher_static_loss(I, l, α1, p1, μ, ρρ) for l in ll]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-23T09:14:07.992458Z",
+     "start_time": "2019-08-23T09:13:46.019115Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "p1 = α1\n",
+    "best_static = [multi_dispatcher_static_loss(I, l, α1, p1, μ, ρρ) for l in ll]"
    ]
   },
   {
@@ -470,14 +472,13 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:58:04.770129Z",
-     "start_time": "2019-08-23T08:57:41.894667Z"
+     "end_time": "2019-08-23T09:14:28.116679Z",
+     "start_time": "2019-08-23T09:14:07.994688Z"
     }
    },
    "outputs": [],
    "source": [
-    "p1 = α1\n",
-    "best_static = [multi_dispatcher_static_df(I, l, α1, p1, μ, ρρ) for l in ll]"
+    "dynamic = [multi_dispatcher_dynamic_loss(I, l, α1, μ, ρρ) for l in ll]"
    ]
   },
   {
@@ -485,22 +486,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:58:25.919765Z",
-     "start_time": "2019-08-23T08:58:04.771734Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dynamic = [multi_dispatcher_dynamic_df(I, l, α1, μ, ρρ) for l in ll]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-23T08:58:26.216064Z",
-     "start_time": "2019-08-23T08:58:25.921745Z"
+     "end_time": "2019-08-23T09:14:28.540817Z",
+     "start_time": "2019-08-23T09:14:28.118906Z"
     }
    },
    "outputs": [
@@ -553,11 +540,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:58:26.222846Z",
-     "start_time": "2019-08-23T08:58:26.219247Z"
+     "end_time": "2019-08-23T09:14:28.545909Z",
+     "start_time": "2019-08-23T09:14:28.543383Z"
     }
    },
    "outputs": [],
@@ -569,17 +556,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:58:45.339824Z",
-     "start_time": "2019-08-23T08:58:26.225716Z"
+     "end_time": "2019-08-23T09:14:47.793493Z",
+     "start_time": "2019-08-23T09:14:28.547695Z"
     }
    },
    "outputs": [],
    "source": [
     "p1 = α1\n",
-    "static = multi_dispatcher_static_df(I, l, α1, p1, μ, ρρ)"
+    "static = multi_dispatcher_static_loss(I, l, α1, p1, μ, ρρ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-23T09:15:05.045364Z",
+     "start_time": "2019-08-23T09:14:47.795738Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dynamic = multi_dispatcher_dynamic_loss(I, l, α1, μ, ρρ)"
    ]
   },
   {
@@ -587,22 +588,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:59:02.381791Z",
-     "start_time": "2019-08-23T08:58:45.341618Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dynamic = multi_dispatcher_dynamic_df(I, l, α1, μ, ρρ)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-23T08:59:02.620402Z",
-     "start_time": "2019-08-23T08:59:02.385587Z"
+     "end_time": "2019-08-23T09:15:05.276655Z",
+     "start_time": "2019-08-23T09:15:05.047328Z"
     }
    },
    "outputs": [
@@ -649,11 +636,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:59:02.626820Z",
-     "start_time": "2019-08-23T08:59:02.623200Z"
+     "end_time": "2019-08-23T09:15:05.285193Z",
+     "start_time": "2019-08-23T09:15:05.281063Z"
     }
    },
    "outputs": [],
@@ -665,17 +652,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:59:20.827045Z",
-     "start_time": "2019-08-23T08:59:02.629673Z"
+     "end_time": "2019-08-23T09:15:22.606241Z",
+     "start_time": "2019-08-23T09:15:05.288349Z"
     }
    },
    "outputs": [],
    "source": [
     "p1 = .5\n",
-    "uniform_static = multi_dispatcher_static_df(I, l, α1, p1, μ, ρρ)"
+    "uniform_static = multi_dispatcher_static_loss(I, l, α1, p1, μ, ρρ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-23T09:15:40.633484Z",
+     "start_time": "2019-08-23T09:15:22.608202Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "p1 = α1\n",
+    "best_static = multi_dispatcher_static_loss(I, l, α1, p1, μ, ρρ)"
    ]
   },
   {
@@ -683,14 +685,13 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:59:39.038643Z",
-     "start_time": "2019-08-23T08:59:20.828796Z"
+     "end_time": "2019-08-23T09:15:56.456364Z",
+     "start_time": "2019-08-23T09:15:40.635693Z"
     }
    },
    "outputs": [],
    "source": [
-    "p1 = α1\n",
-    "best_static = multi_dispatcher_static_df(I, l, α1, p1, μ, ρρ)"
+    "dynamic = multi_dispatcher_dynamic_loss(I, l, α1, μ, ρρ)"
    ]
   },
   {
@@ -698,22 +699,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:59:54.851917Z",
-     "start_time": "2019-08-23T08:59:39.040500Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dynamic = multi_dispatcher_dynamic_df(I, l, α1, μ, ρρ)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-23T08:59:55.367623Z",
-     "start_time": "2019-08-23T08:59:54.853814Z"
+     "end_time": "2019-08-23T09:15:56.697301Z",
+     "start_time": "2019-08-23T09:15:56.458082Z"
     }
    },
    "outputs": [
@@ -759,11 +746,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T08:59:55.392351Z",
-     "start_time": "2019-08-23T08:59:55.370198Z"
+     "end_time": "2019-08-23T09:15:56.710944Z",
+     "start_time": "2019-08-23T09:15:56.699131Z"
     }
    },
    "outputs": [],
