Add references in Notebooks.

--- a/6-performance-analysis-by-server-elimination/compute_and_plot.ipynb
+++ b/6-performance-analysis-by-server-elimination/compute_and_plot.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 6. Performance analysis by server elimination"
+    "# Chapter 6. Performance analysis by server elimination\n",
+    "\n",
+    "# Céline Comte and Fabien Mathieu"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Notebook computes and plots the numerical results for Chapter 6 of the Ph.D. thesis. Sections 1 and 2 of this Notebook define functions for computing the results, while Sections 3 and 4 plot them. For each section, we add a pointer to the corresponding section or subsection in the manuscript."
+    "This Notebook computes and plots the numerical results for Chapter 6 of the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. Sections 1 and 2 of this Notebook define functions for computing the results, while Sections 3 and 4 plot them. For each section, we add a pointer to the corresponding section or subsection in the manuscript."
    ]
   },
   {
