--- a/7-job-scheduling/plot.ipynb
+++ b/7-job-scheduling/plot.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7. Job scheduling"
+    "# Chapter 7. Job scheduling\n",
+    "\n",
+    "# Céline Comte"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the mean delay with the bimodal distribution, we would need to divide all results by five because the calculations are made with a mean job size of five."
+    "This Notebook plots the numerical results for Chapter 7 of the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. For the mean delay with the bimodal distribution, we would need to divide all results by five because the calculations are made with a mean job size of five."
    ]
   },
   {
