--- a/9-1-combining-job-scheduling-and-load-balancing/plot.ipynb
+++ b/9-1-combining-job-scheduling-and-load-balancing/plot.ipynb
@@ -6,7 +6,14 @@
    "source": [
     "# Section 9.1. Combining job scheduling and load balancing\n",
     "\n",
-    "Plot the numerical results of Section 9.1."
+    "# Céline Comte"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This Notebook plots the numerical results for Section 9.1 of the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte."
    ]
   },
   {
