--- a/9-2-load-balancing-with-multiple-dispatchers/plot.ipynb
+++ b/9-2-load-balancing-with-multiple-dispatchers/plot.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 9. Extensions\n",
+    "# Section 9.2. Load balancing with multiple dispatchers\n",
     "\n",
-    "Compute and plot the numerical results of Section 9.2. The commented code is in charge of loading simulation results that might be added later."
+    "# Céline Comte"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This Notebook plots the numerical results for Section 9.2 of the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. The commented code loads simulation results that might be added later."
    ]
   },
   {
