--- a/8-load-balancing/dynamic-onetype-exact.ipynb
+++ b/8-load-balancing/dynamic-onetype-exact.ipynb
@@ -6,11 +6,14 @@
    "source": [
     "# Chapter 8. Load balancing\n",
     "\n",
-    "Compute the overall performance of the dynamic load balancing when there is a single job type. The results computed in this Notebook are used for paragraph \"Number of tokens\" in Section 8.3.1.\n",
-    "\n",
-    "The function ``dynamic`` below computes the loss probability and the expected number of customers under the dynamic load-balancing algorithm introduced in Section 8.1, in the special case where there is a single job type. This corresponds to the scenario of Section 8.3.1.\n",
-    "\n",
-    "The state aggregation we use to speed up computations doesn't allow us to derive the activity probability of each compute. Therefore, these results are only used to compute the results "
+    "# Céline Comte"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This Notebook computes numerical results for Chapter 8 of the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. Specifically, the following piece of code computes the overall performance of the dynamic load balancing when there is a single job type. The obtained results are used for the paragraph \"Number of tokens\" in Section 8.3.1."
    ]
   },
   {
@@ -24,19 +27,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T14:44:45.823393Z",
+     "start_time": "2019-08-16T14:44:45.527360Z"
+    },
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
     "%pylab inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T14:44:45.832003Z",
+     "start_time": "2019-08-16T14:44:45.826329Z"
+    },
     "hidden": true
    },
    "outputs": [],
@@ -51,8 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T14:44:46.042862Z",
+     "start_time": "2019-08-16T14:44:45.835303Z"
+    },
     "hidden": true
    },
    "outputs": [],
@@ -63,8 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T14:44:46.050495Z",
+     "start_time": "2019-08-16T14:44:46.045087Z"
+    },
     "hidden": true
    },
    "outputs": [],
@@ -218,15 +245,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Functions"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "The function ``dynamic`` below computes the loss probability and the expected number of customers under the dynamic load-balancing algorithm introduced in Section 8.1, in the special case where there is a single job type. This corresponds to the scenario of Section 8.3.1. The state aggregation we use to speed up computations doesn't allow us to derive the activity probability of each computer."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T14:44:46.066941Z",
+     "start_time": "2019-08-16T14:44:46.053352Z"
+    },
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def dynamic(I, ℓ, μ, ν, prefix=\"\"):\n",
@@ -264,15 +308,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The function ``create_dynamic_df`` calls the function ``dynamic`` and creates a dataframe (from ``pandas`` library) that stores the results:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T14:44:46.080102Z",
+     "start_time": "2019-08-16T14:44:46.069094Z"
+    },
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def create_dynamic_df(I, ℓ, μ, ρρ, prefix=\"\"):\n",
@@ -296,8 +348,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T14:44:46.087864Z",
+     "start_time": "2019-08-16T14:44:46.082309Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# parameters\n",
@@ -316,8 +373,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T14:44:46.096023Z",
+     "start_time": "2019-08-16T14:44:46.091438Z"
+    },
     "hidden": true
    },
    "outputs": [],
@@ -328,8 +389,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T14:44:54.535112Z",
+     "start_time": "2019-08-16T14:44:46.098566Z"
+    },
     "hidden": true
    },
    "outputs": [],
@@ -347,8 +412,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T14:44:54.559278Z",
+     "start_time": "2019-08-16T14:44:54.536962Z"
+    },
     "hidden": true
    },
    "outputs": [],
@@ -359,9 +428,35 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python3",
+   "name": "python3"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
