--- a/8-load-balancing/static-exact.ipynb
+++ b/8-load-balancing/static-exact.ipynb
@@ -6,7 +6,14 @@
    "source": [
     "# Chapter 8. Load balancing\n",
     "\n",
-    "Compute the performance of two static load-balancing policies, referred to as *best static* and *uniform static*. A static load-balancing policy assigns each incoming job to a computer chosen at random, independently of the current cluster state and according to pre-determined routing probabilities. For each $i = 1,\\ldots,I$, we let $p_i$ denote the probability that an incoming job is assigned to computer $i$. The exogeneous arrival rate is denoted by $\\nu$."
+    "# Céline Comte"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This Notebook computes numerical results for Chapter 8 of the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. Specifically, the following piece of code computes the performance of two static load-balancing policies, referred to as *best static* and *uniform static*. A static load-balancing policy assigns each incoming job to a computer chosen at random, independently of the current cluster state, according to pre-determined routing probabilities. For each $i = 1,\\ldots,I$, we let $p_i$ denote the probability that an incoming job is assigned to computer $i$. The exogeneous arrival rate is denoted by $\\nu$."
    ]
   },
   {
@@ -20,19 +27,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T15:17:54.844221Z",
+     "start_time": "2019-08-16T15:17:54.578059Z"
+    },
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
     "%pylab inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T15:17:54.849907Z",
+     "start_time": "2019-08-16T15:17:54.846580Z"
+    },
     "hidden": true
    },
    "outputs": [],
@@ -47,8 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T15:17:55.062461Z",
+     "start_time": "2019-08-16T15:17:54.851741Z"
+    },
     "hidden": true
    },
    "outputs": [],
@@ -59,8 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T15:17:55.068773Z",
+     "start_time": "2019-08-16T15:17:55.064698Z"
+    },
     "hidden": true
    },
    "outputs": [],
@@ -79,14 +110,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Computations"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-30T11:24:34.610042Z",
+     "start_time": "2018-08-30T11:24:34.590278Z"
+    },
+    "hidden": true
+   },
    "source": [
     "**Independence.**\n",
     "In steady state, the number of jobs at each computer is independent of the number of jobs at the other computers. Furthermore, for each $i = 1,\\ldots,I$, the number of available tokens of computer $i$ is equal to the number of customers in an M/M/1/$\\ell_i$ queue. Therefore, the stationary distribution of the Markov process defined by the macrostate $y = (y_1, \\ldots, y_I)$ that counts the number of available tokens of each computer is given by\n",
@@ -108,7 +147,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "**Loss probability.**\n",
     "With this observation in mind, we can write the average loss probability $\\beta$ as follows:\n",
@@ -128,7 +169,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "**Mean number of jobs.**\n",
     "By linearity of the expectation, the expected number $L$ of jobs in the cluster is given by\n",
@@ -148,22 +191,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Functions"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Compute performance in an M/M/1/$\\ell$ queue subject to the load $\\rho$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T15:17:55.079144Z",
+     "start_time": "2019-08-16T15:17:55.071212Z"
+    },
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def mm1ℓ(ℓ, ρ):\n",
@@ -174,15 +227,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T13:41:53.529008Z",
+     "start_time": "2019-08-16T13:41:53.524821Z"
+    },
+    "hidden": true
+   },
    "source": [
     "Compute performance under a given static load-balancing policy, defined by the routing probabilities given by the vector $p$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T15:17:55.089176Z",
+     "start_time": "2019-08-16T15:17:55.080758Z"
+    },
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def static(I, ℓ, μ, ν, p):\n",
@@ -199,15 +264,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-08-30T11:25:20.452340Z",
+     "start_time": "2018-08-30T11:25:20.435377Z"
+    },
+    "hidden": true
+   },
    "source": [
     "The function ``create_static_df`` calls the function ``static`` and creates a dataframe (from ``pandas`` library) that stores the results:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T15:17:55.112050Z",
+     "start_time": "2019-08-16T15:17:55.091424Z"
+    },
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def create_static_df(I, ℓ, μ, ρρ, p, prefix = \"\"):\n",
@@ -231,14 +308,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## A single job type"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We consider the first scenario in the paper.\n",
     "There are $I = 10$ computers, each with $\\ell = 6$ tokens.\n",
@@ -250,8 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T15:17:55.120081Z",
+     "start_time": "2019-08-16T15:17:55.114467Z"
+    },
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# parameters\n",
@@ -271,8 +358,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T15:17:55.453897Z",
+     "start_time": "2019-08-16T15:17:55.122118Z"
+    },
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# compute the analytical results\n",
@@ -282,8 +375,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T15:17:55.519240Z",
+     "start_time": "2019-08-16T15:17:55.455579Z"
+    },
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# save them in csv\n",
@@ -293,14 +392,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Two job types"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We consider the second scenario in the paper.\n",
     "There are $I = 10$ servers, each with $\\ell = 6$ tokens.\n",
@@ -314,8 +417,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T15:17:55.533680Z",
+     "start_time": "2019-08-16T15:17:55.524435Z"
+    },
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# parameters\n",
@@ -334,8 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T15:17:55.786970Z",
+     "start_time": "2019-08-16T15:17:55.536585Z"
+    },
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# compute the analytical results\n",
@@ -345,8 +460,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-16T15:17:55.855070Z",
+     "start_time": "2019-08-16T15:17:55.788821Z"
+    },
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# save the results in csv\n",
@@ -356,9 +477,35 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python3",
+   "name": "python3"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
